# FlashRAG

./: pyproject.toml  requirements.txt
webui/components/: chat.py  evaluate.py  preview.py
